--- a/Everpobre/KCGPhotoViewController.xib
+++ b/Everpobre/KCGPhotoViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -18,13 +18,14 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-image-available.png" id="FgY-g6-HC7">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-image-available.png" translatesAutoresizingMaskIntoConstraints="NO" id="FgY-g6-HC7">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                 </imageView>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="pFU-sD-Ikj">
-                    <rect key="frame" x="0.0" y="524" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pFU-sD-Ikj">
+                    <rect key="frame" x="0.0" y="480" width="320" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="y4o-mG-9eo"/>
+                    </constraints>
                     <items>
                         <barButtonItem systemItem="camera" id="bN5-gg-VPz">
                             <connections>
@@ -45,12 +46,20 @@
                         </barButtonItem>
                     </items>
                 </toolbar>
-                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" id="OoS-C3-GI5">
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="OoS-C3-GI5">
                     <rect key="frame" x="142" y="243" width="37" height="37"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                 </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="FgY-g6-HC7" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Njc-rM-IR9"/>
+                <constraint firstAttribute="trailing" secondItem="pFU-sD-Ikj" secondAttribute="trailing" id="a5S-GW-npI"/>
+                <constraint firstItem="FgY-g6-HC7" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="bc9-EU-G6Z"/>
+                <constraint firstItem="pFU-sD-Ikj" firstAttribute="top" secondItem="FgY-g6-HC7" secondAttribute="bottom" id="bgM-P0-hJP"/>
+                <constraint firstItem="pFU-sD-Ikj" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="cN3-Oq-200"/>
+                <constraint firstAttribute="trailing" secondItem="FgY-g6-HC7" secondAttribute="trailing" id="kb7-nY-vBU"/>
+                <constraint firstAttribute="bottom" secondItem="pFU-sD-Ikj" secondAttribute="bottom" constant="44" id="sSx-vd-iTi"/>
+            </constraints>
             <point key="canvasLocation" x="369" y="399"/>
         </view>
     </objects>
